Fix issue-19328- Success Message Icon vertically misaligned in admin panel

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_messages.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_messages.less
@@ -121,6 +121,15 @@
     }
 }
 
+#import_validation_container  {
+    .message-success {
+        &:before {
+            color: @alert-icon__success__color;
+            content: @alert-icon__success__content;
+            top: 2.3rem;
+        }
+    }
+}
 .message-spinner {
     &:before {
         display: none;
